# brave-opus

./: Cargo.toml  README.md  bacon.toml  clippy.toml
crates/brave-opus/: Cargo.toml
crates/brave-opus/examples/: html2text.rs
crates/brave-opus/src/: main.rs  run.rs
crates/bravecli/: Cargo.toml
crates/bravecli/examples/: get_source.rs  wikipedia.rs
crates/bravecli/src/: main.rs  search.rs  suggest.rs  summarizer.rs  value_parsers.rs
lib/anthropic/: Cargo.toml  README.md
lib/anthropic/examples/: stream.rs  tail.rs
lib/anthropic/src/: anthropic.rs  error.rs  lib.rs  requests.rs
lib/anthropic/src/apis/: messages.rs  mod.rs
lib/brave/: Cargo.toml  README.md
lib/brave/examples/: search.rs
lib/brave/src/: brave.rs  error.rs  lib.rs  query.rs  requests.rs  search.rs  summarize.rs
lib/brave/src/apis/: mod.rs  suggest.rs  summarizer.rs  web_search.rs
xtask/src/: main.rs  scripts.rs
