[package]
name = "bravecli"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/bravecli"
documentation = "https://github.com/cloudbridgeuy/bravecli/README.md"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bravecli"
path = "src/main.rs"

[dependencies]
brave = { version = "0.1.0", path = "../../lib/brave" }
clap = { version = "4.5.16", features = ["derive", "env"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
color-eyre = "0.6.3"
tokio = { version = "1.39.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
ctrlc = { version = "3.4.5", features = ["termination"] }
regex = "1.10.6"
fantoccini = "0.21.1"
nix = "0.29.0"
futures = "0.3.30"
sysinfo = "0.31.2"
html5ever = "0.28.0"
markup5ever_rcdom = "0.3.0"
select = "0.6.0"
scraper = "0.20.0"
tl = "0.7.8"
bytes = "1.7.1"
