[package]
name = "anthropic"
version = "0.1.0"
description = "A very simple Rust library for Anthropic's Claude API, free from complex async operations and redundant dependencies."
license = "MIT"
repository = "https://github.com/cloudbridgeuy/brave-opus/tree/main/lib/anthropic"
edition = "2021"
keywords = ["anthropic", "api", "llm", "claude", "api-bindings"]

[dependencies]
ureq = { version = "2.9.6", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
eventsource-client = "0.12.2"

[dev-dependencies]
color-eyre = "0.6.3"
